add functionality to js for incomplete forms
Co-authored-by: Tristan Emmerson <tristan@stickerslug.com>

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,15 @@
   display: none;
   text-align: center;
 }
+
+#hiddenQuiz {
+  display: none;
+}
+
+#underAge {
+  display: none;
+}
+
+#genderError, #dateError, #religionError {
+  display: none;
+}
